--- a/potfolio.html
+++ b/potfolio.html
@@ -23,6 +23,9 @@
         <li>Dancing</li>
         <li>Freelancing</li>
         <li>Photo Editing</li>
+        <li>Basic of python</li>
+        <li>Basic of c</li>
+        <li>Knowledge of HTML,CSS,Javascript</li>
     </ul>
     <h2>Hobbies:</h2>
     <ul>
